--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.2.0')
     testImplementation('org.junit.jupiter:junit-jupiter-params:5.2.0')
@@ -51,7 +52,6 @@ dependencies {
     testImplementation('org.junit.platform:junit-platform-commons:1.5.2')
     testImplementation('org.mockito:mockito-core:2.21.0')
     testImplementation('org.mockito:mockito-junit-jupiter:2.21.0')
-    
 }
 	
 
